web-infras/parser/tests/fixtures/babel/es2022/top-level-await-script/top-level/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,7)
1|await 0;
 |     ^
